# antropic_client_rs

./: Cargo.toml  LICENCE
src/: lib.rs
src/client/: mod.rs  models.rs
