[package]
name = "antropic_client_rs"
version = "0.2.0"
edition = "2021"
authors = ["Chloe Pratas <chloevision97@gmail.com>"]
license = "MIT"
description = "A client for the Antropic API"
repository = "https://github.com/Chloe199719/antropic_client_rs"

[dependencies]
reqwest = { version = "0.12.9", features = [
    "json",
    "cookies",
    "rustls-tls",
    "multipart",
] }
serde_json = { version = "1.0.127", features = ["raw_value"] }
serde = { version = "1.0.209", features = ["derive"] }
dotenvy = "0.15.7"
futures = "0.3.30"
chrono = { version = "0.4.35", features = ["serde", "clock"] }
tokio = { version = "1.39.3", features = ["full"] }
anyhow = "1.0.95"
base64 = "0.22.1"